# strusTutorials

./: .gitignore  CHANGELOG  CONTRIBUTORS  COPYING  LICENSE  README  README.md
codeproject/Building-a-search-engine-with-Python-Tornado-and-Strus/: Dockerfile  attic.html  countries.txt  countries.xml  createDocs.pl  languages.txt  show_strusIR.php  show_strusServer.php  strusServer.py  tutorial.html
codeproject/Building-a-search-engine-with-Python-Tornado-and-Strus/src/step4/: strusServer.py
codeproject/Building-a-search-engine-with-Python-Tornado-and-Strus/src/step6/: strusIR.py  strusServer.py
codeproject/Building-a-search-engine-with-Python-Tornado-and-Strus/src/step8/: strusIR.py
codeproject/Building-a-search-engine-with-Strus-tutorial/: article.html
codeproject/Building-a-search-engine-with-Strus-tutorial/article_files/: Building-a-search-engine-with-Strus-tutorial.html  a.js  article.js  element.js
codeproject/Distributing-the-search-index-with-Strus/: Dockerfile  article.html  search_bm25_html.tpl  strusHttpServer.py  strusIR.py  strusMessage.py  strusQueryServer.py  strusStatisticsServer.py  strusStorageServer.py
codeproject/How-to-extend-Strus-with-new-functions/: formulas.txt
codeproject/How-to-extend-Strus-with-new-functions/src/: CMakeLists.txt  cmake_install.cmake  minwin_summarizer.cpp  minwin_summarizer.hpp  minwin_weighting.cpp  minwin_weighting.hpp  modstrus_storage_example.cpp  positionWindow.cpp  positionWindow.hpp  testModStorageExample.cpp  window_joinop.cpp
codeproject/Method-call-traces-for-Strus/src/: CMakeLists.txt  modstrus_trace_example.cpp
config/musicbrainz/: query.eva  query.qln  storage.conf  tutorial.ana
doc/webpage/: tutorial_MusicBrainzDataset.htm  tutorial_musicmoz.htm
scripts/musicbrainz/: step1_fetchData.sh
